--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,8 @@
       </div>
     </div>
     <div class="row">
-        <div id="footer" class"twelvecol last">
-          <p><strong>Congreso Interactivo 2011</strong> <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/ar/"><img src="http://i.creativecommons.org/l/by-nc-sa/2.5/ar/80x15.png"/></a></p>
+        <div id="footer" class="twelvecol last">
+          <p><strong>Congreso Interactivo 2011</strong> <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/ar/"><img src="http://i.creativecommons.org/l/by-nc-sa/2.5/ar/80x15.png" alt="CC" /></a></p>
             <ul class="clearfix">
                 <li><a href="/quienes-somos">Quienes somos</a></li>
                 <li><a href="#">Metodolog&iacute;a</a></li>
